RegressionTests/TestSuiteExport/reject/inline_asm_invalid_temp_register.blade
// EXPECT: fail
// DIAGNOSTICS: InlineAsmEmptyInstruction

fn f() void {
    asm {
        MOV %foo, #1
    };
}